# SoundcraftUiSC

./: .gitignore  LICENSE  README.md  build.sh  setup.cfg  soundcraftuisc.spec
.github/workflows/: main.yml
example_ui24_offline_exports/S&S Gigs/: BBCo 01-2025 Scott.json  Boyden Wedding.json  Concept 2 10-2023.json  Dorset Park '24.json  Dorset.json  Eagles Club.json  Echo.json  Enousburgh cc.json  Hula Scott 12-2024.json  Lake moray.json  Mark 6-24 on tap.json  Mark on tap Feb 2026.json  Marks on tap mix.json  Medium Room.json  New.json  Old Post 4-25.json  Old Post Inside 2.json  Old Post Inside.json  Old post.json  OldPostScott 12-2025.json  On Tap 10-31.json  On Tap 2-26.json  On Tap Mark NYE '26.json  On Tap New.json  On Tap Scott 06-2025.json  On Tap Scott 10-2023.json  On Tap Scott 11-2025.json  On Tap.json  Outdoor Gig 7-23.json  Outdoor Gig.json  Outside '25.json  Round Barn Wedding.json  S & S Outside.json  S&S 2025.json  ScottStartTemplate.json  Snow Farm 22.json  Snow Farm 25.json  Snow farm wedding 25.json  SoBu Scott 2025.json  Spanked Puppy Harry.json  (+8 more)
example_ui24_show_exports/S%26S Gigs/: .uishow  ScottStartTemplate.uisnapshot
soundcraftuisc/: __init__.py  _entry.py  cli.py
test/: test_cli.py
ui24rsc/: cli.py
