[metadata]
name = soundcraftuisc
url = https://github.com/HighTechHarmony/SoundcraftUiSC
author = HighTechHarmony
license = MIT

description = Soundcraft Ui Series Snapshot Converter
long_description =
    ![icon](https://raw.githubusercontent.com/HighTechHarmony/SoundcraftUiSC/main/device.png)

    [![GitHub main workflow](https://img.shields.io/github/actions/workflow/status/HighTechHarmony/SoundcraftUiSC/main.yml?branch=main&logo=github&label=main&style=flat-square)](https://github.com/HighTechHarmony/SoundcraftUiSC/actions)

    **SoundcraftUiSC** — Soundcraft Ui Series Snapshot Converter.

    This package is not yet available on PyPI. Please refer to the
    [GitHub repository](https://github.com/HighTechHarmony/SoundcraftUiSC)
    for installation and usage instructions.
long_description_content_type = text/markdown

keywords = soundcraft ui24r ui series yaml converter diff json tree command snapshot yml mixer dots structured full dotted dotted-format soundcraftuisc
classifiers =
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Terminals
    Topic :: Utilities

version = 0.0.0

[options]
install_requires =
    PyYAML >= 6.0.2, < 7
python_requires = >=3.9.1
packages = soundcraftuisc

[options.package_data]
* = *.yml

[options.extras_require]
dev =
    pyinstaller
    pytest
    ruff

[options.entry_points]
console_scripts =
    soundcraftuisc = soundcraftuisc.cli:main
